--- a/templates/components/modulos.html
+++ b/templates/components/modulos.html
@@ -5,19 +5,15 @@
     <!-- SECCION DE MENU Y MODULOS -->
      <section class="dark:bg-principal">
         <div class="p-8" data-aos="fade-up" data-aos-delay="300">
-            <div class="flex flex-col items-center justify-center">
-                <span class="bg-navbar rounded-full bg-indigo-500 px-2 py-1 text-white uppercase text-sm">
-                    Características
-                </span>
-            </div>
-            <h1 class="dark:text-white text-4xl text-center mt-6 font-Pacifico">
+            
+            <h1 class="dark:text-white text-4xl text-center mt-16 font-Pacifico">
                 {{title2}}
             </h1>
             <p class="dark:text-gray-400  text-center mt-6 text-4xl font-light">
                 Bienvenido <span class="dark:text-white text-4xl text-center mt-6 font-Pacifico"> {{user.username}} </span>
             </p>
             {% for menu_wrapper in menu_list %} 
-                <div class="w-screen flex border-b-4 border-green-500">
+                <div class="w-screen flex border-b-2 border-gray-200 py-4 opacity-90">
                     <i class="{{menu_wrapper.menu.icon}} text-3xl text-green-500"></i>
                     <h3 class="dark:text-gray-400 font-bold characteristics-card-title"><a href="">menu {{menu_wrapper.menu.name}}</a></h3>
                 </div>
@@ -27,7 +23,7 @@
                     <div
                         class="characteristics-card bg-white dark:bg-secundario dark:border-none transition duration-500 hover:bg-gradient-to-r hover:from-purple-200 dark:hover:bg-gradient-to-r dark:hover:from-black dark:hover:to-purple-500">
                         <i class="{{group_modulo_permission.module.icon}} text-3xl text-purple-500"></i>
-                        <h3 class="dark:text-gray-400 font-bold characteristics-card-title"><a href="">{{group_modulo_permission.module.name}}</a></h3>
+                        <h3 class="dark:text-gray-400 font-bold characteristics-card-title"><a href="{{group_modulo_permission.module.url}}">{{group_modulo_permission.module.name}}</a></h3>
                     </div>
                 {% endfor %}
                 </div> 
@@ -44,7 +40,8 @@
     <script src="{% static 'js/sweet_alert.js' %}"></script>
 
     <!-- Script para el modal -->
-    <script>
+    
+   {% comment %} <script>
         $(document).ready(function () {
             // Función para ocultar el modal al hacer clic en cualquier botón de ingresar
             $('#btnCliente, #btnAdministrador, #btnModoInvitado').click(function (e) {
@@ -72,9 +69,9 @@
                 }
             });
         });
-    </script> 
+    </script>  {% endcomment %}
     <!-- Script para el carrusel de imágenes -->
-    <script>
+    {% comment %} <script>
         var imagePaths = [
             "{% static 'img/home-carausel/carausel-1.jpg' %}",
             "{% static 'img/home-carausel/carausel-2.jpg' %}",
@@ -105,10 +102,10 @@
             });
             setInterval(nextSlide, 5000); // Cambiar a la siguiente imagen cada 5 segundos
         };
-    </script> 
+    </script>  {% endcomment %}
 
     <!-- Script para enviar correos -->
-  <script>
+  {% comment %} <script> 
         document.addEventListener("DOMContentLoaded", function () {
             var form = document.getElementById('contact-form');
             form.addEventListener('submit', function (event) {
@@ -145,5 +142,5 @@
                 });
             });
         });
-    </script> 
+    </script>  {% endcomment %}
 {% endblock content %}
