--- a/templates/core/suppliers/form.html
+++ b/templates/core/suppliers/form.html
@@ -1,21 +1,15 @@
-{% extends 'base.html' %}
+{% extends 'components/base.html' %}
 {% block content %}
 {% load static %}
-<title>{% block title %} {{ title1 }} {% endblock title %}</title>
-<section class="dark:bg-principal mt-20">
+<title>{% block title %} {{ title }} {% endblock title %}</title>
+<section class="dark:bg-principal">
     <div class="text-center" data-aos="fade" data-aos-delay="200">
-        <div class="sm:pt-28 lg:pt-24">
-            <div class="flex flex-col items-center justify-center">
-                <span class="rounded-full bg-indigo-500 px-2 py-1 text-white uppercase text-sm">
-                    {{ title1 }}
-                </span>
-            </div>
+        <div class="sm:pt-28 lg:pt-4">
+          
             <h1 class="dark:text-white text-4xl  text-center mt-6 font-Pacifico">
-                {{ title2 }}
+                Ingresar {{ title }}
             </h1>
-            <p class="dark:text-gray-400 text-center mt-6 text-lg font-light">
-                Complete el formulario para guardar un nuevo proveedor.
-            </p>
+           
         </div>
         <form method="post" enctype="multipart/form-data" class="space-y-6 py-4">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mx-4 lg:mx-20" data-aos="fade">
@@ -45,7 +39,7 @@
                 <div class="p-4 rounded-3xl dark:bg-secundario bg-white flex flex-col justify-center items-center"
                     data-aos="fade-right" data-aos-delay="200">
                     {% csrf_token %}
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                         <div>
                             <div class="mb-8">
                                 <label for="{{ form.name.id_for_label }}"
@@ -70,11 +64,24 @@
                                 {{ form.phone }}
                             </div>
                         </div>
+                        
+                        <div>
+                            <div class="mb-8">
+                                <label for="{{ form.latitude.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.latitude.label }}</label>
+                                {{ form.latitude }}
+                            </div>
+                            <div class="mb-8">
+                                <label for="{{ form.longitude.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.longitude.label }}</label>
+                                {{ form.longitude }}
+                            </div>
+                        </div> 
                     </div>
                     <div class="mb-8 flex flex-col justify-center items-center">
-                        <label for="{{ form.state.id_for_label }}"
-                            class="dark:text-blue-300 font-black uppercase text-lg">{{ form.state.label }}</label>
-                        {{ form.state }}
+                        <label for="{{ form.active.id_for_label }}"
+                            class="dark:text-blue-300 font-black uppercase text-lg">{{ form.active.label }}</label>
+                        {{ form.active }}
                     </div>
                     <div class="flex flex-col md:flex-row justify-center">
                         <button type="submit"
