--- a/templates/core/suppliers/list.html
+++ b/templates/core/suppliers/list.html
@@ -2,7 +2,7 @@
 {% block content %}
     {% load static %}
     <title>{% block title %}{{ title1 }}{% endblock title %}</title>
-    <section class="dark:bg-principal mt-20">
+    <section class="dark:bg-principal mt-5">
         <div class="text-center" data-aos="fade-up" data-aos-delay="200">
             <div class="sm:pt-28 lg:pt-24">
                 <div class="flex flex-col items-center justify-center">
@@ -13,9 +13,7 @@
                 <h1 class="dark:text-white text-4xl text-center mt-6 font-Pacifico">
                     {{ title2 }}
                 </h1>
-                <p class="dark:text-gray-400 text-center mt-6 text-lg font-light">
-                    Gestione con facilidad cada uno de sus proveedores.
-                </p>
+               
             </div>
             <div class="lg:p-4 rounded-3xl" data-aos="fade-up" data-aos-delay="200">
                 <!-- Barra de búsqueda -->
@@ -72,22 +70,26 @@
                                 <td class="px-6 py-4">{{ item.latitude }}</td>
                                 <td class="px-6 py-4">{{ item.longitude }}</td>
                                 <td class="px-6 py-4">
-                                    {% if item.state %}
+                                    {% if item.active %}
                                     <i class="fa-solid fa-check text-green-500"></i>
                                     {% else %}
-                                    <i class="fa-solid fa-square-minus text-red-500"></i>
+                                    <i class="fa-solid fas fa-eye-slash text-red-500"></i>
                                     {% endif %}
                                 </td>
                                 <td class="px-6 py-4">
+                                  {% if permissions.change_supplier %}
                                     <a href="{% url 'core:supplier_update' item.id %}"
                                         class="text-blue-600 dark:text-blue-500">
                                         <i class="fa-solid fa-gear"></i>
                                     </a>
+                                  {% endif%}  
+                                  {% if permissions.delete_supplier %}
                                     <a href="#"
                                         class="text-red-600 dark:text-red-500"
                                         onclick="openDeleteModal('{{ item.id }}', '{{ item.name }}')">
                                         <i class="fa-solid fa-trash"></i>
                                     </a>
+                                  {% endif %} 
                                 </td>
                             </tr>
                             {% endfor %}
@@ -99,23 +101,23 @@
                 <div class="flex justify-center mt-4">
                     <nav aria-label="Page navigation example">
                         <ul class="inline-flex -space-x-px">
-                            {% if suppliers.has_previous %}
+                            {% if page_obj.has_previous %}
                             <li>
                                 <a href="?page=1"
                                     class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-[#0b1121] dark:border-secundario dark:text-gray-400 dark:hover:bg-[#121c33] dark:hover:text-white">Anterior</a>
                             </li>
                             {% endif %}
-                            {% for num in suppliers.paginator.page_range %}
+                            {% for num in page_obj.paginator.page_range %}
                             <li>
                                 <a href="?page={{ num }}"
-                                    class="flex items-center justify-center px-3 h-8 leading-tight {% if num == suppliers.number %}text-blue-600 bg-blue-50 border border-gray-300 hover:bg-blue-100 hover:text-blue-700 dark:bg-secundario dark:border-principal dark:text-blue-300{% else %}text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-[#0b1121] dark:border-secundario dark:text-gray-400 dark:hover:bg-[#121c33] dark:hover:text-white{% endif %}">
+                                    class="flex items-center justify-center px-3 h-8 leading-tight {% if num == page_obj.number %}text-blue-600 bg-blue-50 border border-gray-300 hover:bg-blue-100 hover:text-blue-700 dark:bg-secundario dark:border-principal dark:text-blue-300{% else %}text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-[#0b1121] dark:border-secundario dark:text-gray-400 dark:hover:bg-[#121c33] dark:hover:text-white{% endif %}">
                                     {{ num }}
                                 </a>
                             </li>
                             {% endfor %}
-                            {% if suppliers.has_next %}
+                            {% if page_obj.has_next %}
                             <li>
-                                <a href="?page={{ suppliers.next_page_number }}"
+                                <a href="?page={{ page_obj.next_page_number }}"
                                     class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-[#0b1121] dark:border-secundario dark:text-gray-400 dark:hover:bg-[#121c33] dark:hover:text-white">Siguiente</a>
                             </li>
                             {% endif %}
@@ -125,10 +127,12 @@
 
                 <!-- Enlaces adicionales -->
                 <div class="flex flex-col md:flex-row justify-center form-group text-center p-4">
+                    {% if permissions.add_supplier %}
                     <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mr-0 md:mr-2 mb-2 md:mb-0 flex items-center justify-center"
                         href="{% url 'core:supplier_create' %}">
                         <i class="fa-solid fa-plus mr-2"></i> Nuevo Proveedor
                     </a>
+                    {% endif %}
                     <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full flex items-center justify-center"
                         href="{% url 'home' %}">
                         <i class="fa-solid fa-house"></i>
@@ -138,7 +142,7 @@
         </div>
     </section>
 
-    {% comment %} {% include 'core/delete.html' %}
+    {% include 'core/delete.html' %}
     <script>
         function openDeleteModal(id, name) {
             const deleteForm = document.getElementById('deleteForm');
@@ -150,5 +154,5 @@
         function closeModal() {
             document.getElementById('deleteModal').classList.add('hidden');
         }
-    </script> {% endcomment %}
+    </script> 
 {% endblock %}
