--- a/templates/sales/invoices/list.html
+++ b/templates/sales/invoices/list.html
@@ -36,39 +36,38 @@
                         </form>
                     </div>
                 </div>
-                <!-- Tabla de proveedores -->
+                <!-- Tabla de ventas -->
                 <div class="overflow-x-auto">
                     <table class="w-full text-center text-lg">
                         <thead class="uppercase font-Tiny5 bg-gray-50 dark:bg-secundario dark:text-blue-300">
                             <tr>
-                                <th scope="col" class="px-6 py-3">ID</th>
-                                <th scope="col" class="px-6 py-3">Imagen</th>
-                                <th scope="col" class="px-6 py-3">Nombre</th>
-                                <th scope="col" class="px-6 py-3">RUC o DNI</th>
-                                <th scope="col" class="px-6 py-3">Dirección</th>
-                                <th scope="col" class="px-6 py-3">Celular</th>
-                                <th scope="col" class="px-6 py-3">Latitud</th>
-                                <th scope="col" class="px-6 py-3">Longitud</th>
+                                <th scope="col" class="px-6 py-3">Factura</th>
+                                <th scope="col" class="px-6 py-3">Cliente</th>
+                                <th scope="col" class="px-6 py-3">Fecha Emision</th>
+                                <th scope="col" class="px-6 py-3">Subtotal</th>
+                                <th scope="col" class="px-6 py-3">Iva</th>
+                                <th scope="col" class="px-6 py-3">Descuento</th>
+                                <th scope="col" class="px-6 py-3">Total</th>
+                                <th scope="col" class="px-6 py-3">Metodo Pago</th>
                                 <th scope="col" class="px-6 py-3">Estado</th>
+                                <th scope="col" class="px-6 py-3">Activo</th>
                                 <th scope="col" class="px-6 py-3">Acciones</th>
 
                             </tr>
                         </thead>
                         <tbody>
-                            {% for item in suppliers %}
+
+                            {% for item in invoices %}
                             <tr class="dark:text-gray-400 bg-white border-b dark:bg-[#0b1121] dark:border-secundario hover:bg-gray-50 dark:hover:bg-[#121c33]">
                                 <td class="px-6 py-4">{{ item.id }}</td>
-                                <td class="px-6 py-4">
-                                    <img class="mx-auto w-16 h-16 object-contain rounded-2xl"
-                                        src="{% if item.image %}{{ item.image.url }}{% else %}{% static 'img/default_supplier.jpg' %}{% endif %}"
-                                        alt="Imagen del proveedor">
-                                </td>
-                                <td class="px-6 py-4">{{ item.name }}</td>
-                                <td class="px-6 py-4">{{ item.ruc }}</td>
-                                <td class="px-6 py-4">{{ item.address }}</td>
-                                <td class="px-6 py-4">{{ item.phone }}</td>
-                                <td class="px-6 py-4">{{ item.latitude }}</td>
-                                <td class="px-6 py-4">{{ item.longitude }}</td>
+                                <td class="px-6 py-4">{{ item.customer.getfullname }}</td>
+                                <td class="px-6 py-4">{{ item.issue_date }}</td>
+                                <td class="px-6 py-4">{{ item.subtotal }}</td>
+                                <td class="px-6 py-4">{{ item.iva }}</td>
+                                <td class="px-6 py-4">{{ item.discount }}</td>
+                                <td class="px-6 py-4">{{ item.total }}</td>
+                                <td class="px-6 py-4">{{ item.payment_method }}</td>
+                                <td class="px-6 py-4">{{ item.get_state_display }}</td>
                                 <td class="px-6 py-4">
                                     {% if item.active %}
                                     <i class="fa-solid fa-check text-green-500"></i>
@@ -77,16 +76,16 @@
                                     {% endif %}
                                 </td>
                                 <td class="px-6 py-4">
-                                  {% if permissions.change_supplier %}
-                                    <a href="{% url 'core:supplier_update' item.id %}"
+                                  {% if permissions.change_invoice %}
+                                    <a href="#"
                                         class="text-blue-600 dark:text-blue-500">
                                         <i class="fa-solid fa-gear"></i>
                                     </a>
                                   {% endif%}  
-                                  {% if permissions.delete_supplier %}
+                                  {% if permissions.delete_invoice %}
                                     <a href="#"
                                         class="text-red-600 dark:text-red-500"
-                                        onclick="openDeleteModal('{{ item.id }}', '{{ item.name }}')">
+                                        onclick="openDeleteModal('{{ item.id }}', '{{ item.customer.getfullname }}')">
                                         <i class="fa-solid fa-trash"></i>
                                     </a>
                                   {% endif %} 
@@ -127,9 +126,9 @@
 
                 <!-- Enlaces adicionales -->
                 <div class="flex flex-col md:flex-row justify-center form-group text-center p-4">
-                    {% if permissions.add_supplier %}
+                    {% if permissions.add_invoice %}
                     <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mr-0 md:mr-2 mb-2 md:mb-0 flex items-center justify-center"
-                        href="{% url 'core:supplier_create' %}">
+                        href="{% url 'sales:sales_create' %}">
                         <i class="fa-solid fa-plus mr-2"></i> Nuevo Proveedor
                     </a>
                     {% endif %}
@@ -155,4 +154,4 @@
             document.getElementById('deleteModal').classList.add('hidden');
         }
     </script> 
-{% endblock %}
+{% endblock %} 
