--- a/templates/sales/invoices/form.html
+++ b/templates/sales/invoices/form.html
@@ -1,5 +1,6 @@
 {% extends 'components/base.html' %}
 {% block content %}
+    {% load static %}
     <title>{% block title %}Registrar Venta{% endblock title %}</title>
     <section class="dark:bg-principal ">
         <div class="text-center" data-aos="fade-up" data-aos-delay="200">
@@ -11,7 +12,7 @@
             </div>
             <div class="lg:p-4 rounded-3xl" data-aos="fade-up" data-aos-delay="200">
                 <!-- Formulario de Venta -->
-                <form id="frmSale" method="POST" action="{% url 'sales:sales_create' %}" class="space-y-6">
+                <form id="frmSale" method="POST" class="space-y-6">
                     {% csrf_token %}
                     {{ form.media }}
                     <div class="p-4 space-y-4">
@@ -52,7 +53,7 @@
                            
                             <div>
                                 <label for="{{ form.payment.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.payment.label }}</label>
-                                {{ form.payment }}
+                                {{ form.payment }} 
                             </div>
                             <div>
                                 <label for="{{ form.change.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.change.label }}</label>
@@ -69,9 +70,9 @@
                         <div class="grid grid-cols-1 md:grid-cols-4 gap-2">
                             <div>
                                 <label for="product" class="dark:text-blue-300 font-black uppercase text-lg">Producto</label>
-                               <select name="type_hours" id="product" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
+                               <select name="product" id="product" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
                                 {% for prod in products%}
-                                    <option data-id="{{prod.id}}" data-des="{{prod.description}}" data-price="{{prod.price}}" data-stock="{{prod.stock}}" data-iva="{{prod.iva__value}}" value="{{prod.id}}">{{prod.description}}</option>
+                                    <option data-id="{{prod.id}}" data-des="{{prod.description}}" data-price="{{prod.price}}" data-stock="{{prod.stock}}" data-iva="{{prod.iva__value}}" value="{{prod.id}}" {% if forloop.first %}selected{% endif %}>{{prod.description}}</option>
                                 {% endfor %}
                                </select>
                             </div>
@@ -111,32 +112,24 @@
                                 <th scope="col" class="px-6 py-3">Precio</th>
                                 <th scope="col" class="px-6 py-3">Cantidad</th>
                                 <th scope="col" class="px-6 py-3">Iva</th>
-                                <th scope="col" class="px-6 py-3">Subtotal</th>
+                                <th scope="col" class="px-6 py-3">Total</th>
                                 <th scope="col" class="px-6 py-3">Eliminar</th>
 
                             </tr>
                         </thead>
                         <tbody id="detalle">
-                            <tr class="dark:text-gray-400 bg-white border-b dark:bg-[#0b1121] dark:border-secundario hover:bg-gray-50 dark:hover:bg-[#121c33]">
-                                <td class="px-6 py-4">1</td>
-                                <td class="px-6 py-4">Aceite Girasol</td>
-                                <td class="px-6 py-4">2.5</td>
-                                <td class="px-6 py-4">2</td>
-                                <td class="px-6 py-4">1.2</td>
-                                <td class="px-6 py-4">11.2</td>
-                                <td class="px-6 py-4">                               
-                                    <a href="#"
-                                        class="text-red-600 dark:text-red-500"
-                                        >
-                                        <i class="fa-solid fa-trash"></i>
-                                    </a>
-                                </td>
-                            </tr>
+                            
                         </tbody>
                     </table>
                 </div>
             {% comment %} fin de tabla de detalle de productos {% endcomment %}
        </div>
    </section>
-   {% comment %} <script src="{% static 'js/invoices/sales.js' %}"></script> {% endcomment %}
+   <script>
+	 var save_url = "{{save_url}}"
+	 var detail_sales = JSON.parse("{{ detail_sales|escapejs }}")
+     // [{id:1,des:'aceite'}]
+	
+  </script> 
+   <script src="{% static 'js/invoices/sales.js' %}"></script>
 {% endblock %}
