--- a/templates/sales/invoices/list.html
+++ b/templates/sales/invoices/list.html
@@ -49,7 +49,7 @@
                                 <th scope="col" class="px-6 py-3">Descuento</th>
                                 <th scope="col" class="px-6 py-3">Total</th>
                                 <th scope="col" class="px-6 py-3">Metodo Pago</th>
-                                <th scope="col" class="px-6 py-3">Estado</th>
+                                <th scope="col" class="px-6 py-3">Tipo</th>
                                 <th scope="col" class="px-6 py-3">Activo</th>
                                 <th scope="col" class="px-6 py-3">Acciones</th>
 
@@ -60,7 +60,7 @@
                             {% for item in invoices %}
                             <tr class="dark:text-gray-400 bg-white border-b dark:bg-[#0b1121] dark:border-secundario hover:bg-gray-50 dark:hover:bg-[#121c33]">
                                 <td class="px-6 py-4">{{ item.id }}</td>
-                                <td class="px-6 py-4">{{ item.customer.getfullname }}</td>
+                                <td class="px-6 py-4">{{ item.customer.get_full_name }}</td>
                                 <td class="px-6 py-4">{{ item.issue_date }}</td>
                                 <td class="px-6 py-4">{{ item.subtotal }}</td>
                                 <td class="px-6 py-4">{{ item.iva }}</td>
@@ -77,7 +77,8 @@
                                 </td>
                                 <td class="px-6 py-4">
                                   {% if permissions.change_invoice %}
-                                    <a href="#"
+                                   
+                                    <a href="{% url 'sales:sales_update' item.id %}"
                                         class="text-blue-600 dark:text-blue-500">
                                         <i class="fa-solid fa-gear"></i>
                                     </a>
@@ -129,7 +130,7 @@
                     {% if permissions.add_invoice %}
                     <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mr-0 md:mr-2 mb-2 md:mb-0 flex items-center justify-center"
                         href="{% url 'sales:sales_create' %}">
-                        <i class="fa-solid fa-plus mr-2"></i> Nuevo Proveedor
+                        <i class="fa-solid fa-plus mr-2"></i> Nuevo Factura
                     </a>
                     {% endif %}
                     <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full flex items-center justify-center"
